# LearningOpenGL

./: .gitignore  CMakeLists.txt
include/: setup.hpp
src/: setup.cpp
